# DYSEKT

./: .gitignore  .gitmodules  CMakeLists.txt  DYSEKT_Link_NoOverlap_Reference.txt  INSTALL.txt  README.md  add_sfizz_submodule.sh  build.sh  dysekt-add-slice-toggle.patch  make_waveform_frame_package.sh
.github/workflows/: build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h
Source/ui/: OscilloscopeView.h  SliceLcdDisplay.cpp  WaveformView.h
_codeql_build_dir/: CMakeCache.txt  Dysekt_vst3_helper  Makefile  cmake_install.cmake
_codeql_build_dir/Dysekt_artefacts/JuceLibraryCode/: Info.txt
_codeql_build_dir/Dysekt_artefacts/JuceLibraryCode/Release/: Defs.txt
_codeql_build_dir/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/modules/: Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/tools/modules/: Makefile  cmake_install.cmake
_codeql_build_dir/juce_binarydata_DysektFonts/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  input_file_list
docs/: USER_MANUAL.md
pull_request_comments/: 11.md
resources/themes/: KR8TIVE.dysektstyle  dark.dysektstyle  hack.dysektstyle  pigments.dysektstyle  snow.dysektstyle
src/: DefaultSample.h  EmbeddedThemes.h  MidiLearnManager.h  PluginEditor.cpp  PluginEditor.h  PluginEditorConstants.h  PluginProcessor.cpp  PluginProcessor.h  SampleData.cpp  SampleData.h  SliceControlBar.h  TrimDialog.cpp  TrimSession.h  UndoManager.h
src/audio/: AdsrEnvelope.h  AudioAnalysis.h  LazyChopEngine.cpp  LazyChopEngine.h  SampleData.cpp  SampleData.h  SfzPlayer.cpp  SfzPlayer.h  Slice.h  SliceManager.cpp  SliceManager.h  SoundFontLoader.cpp  SoundFontLoader.h  TransientDetector.cpp  TransientDetector.h  Voice.h  VoicePool.cpp  VoicePool.h
src/params/: ParamIds.h  ParamLayout.cpp
src/src/: MidiLearnManager.h  PluginEditor.cpp  PluginEditor.h  PluginEditorConstants.h  PluginProcessor.cpp  PluginProcessor.h  UndoManager.h
src/src/audio/: AdsrEnvelope.h  LazyChopEngine.cpp  SampleData.cpp  SampleData.h  SliceManager.h  SoundFontLoader.cpp  Voice.h  VoicePool.cpp  VoicePool.h
src/src/params/: ParamIds.h  ParamLayout.cpp
src/src/ui/: ActionPanel.h  DualLcdControlFrame.cpp  DualLcdControlFrame.h  DysektLookAndFeel.h  FileBrowserPanel.h  HeaderBar.cpp  HeaderBar.h  LogoBar.cpp  MidiLearnDialog.cpp  MidiLearnDialog.h  MixerPanel.cpp  PluginEditor.cpp  PluginEditorConstants.h  SliceControlBar.cpp  SliceControlBar.h  SliceLcdDisplay.cpp  SliceLcdDisplay.h  SliceWaveformLcd.cpp  SliceWaveformLcd.h  ThemeData.h  TrimDialog.h  UIHelpers.h  WaveformOverview.h  WaveformView.cpp  WaveformView.h
src/ui/: ActionPanel.cpp  ActionPanel.h  AddZoneOverlay.h  ArchiveIntegration.cpp  ArchiveIntegration.h  ArchiveUrlOverlay.h  AutoChopPanel.cpp  AutoChopPanel.h  ConfirmOverlay.h  DualLcdControlFrame.cpp  DualLcdControlFrame.h  DysektLookAndFeel.cpp  DysektLookAndFeel.h  FileBrowserPanel.cpp  FileBrowserPanel.h  GlobalEqPanel.cpp  GlobalEqPanel.h  HeaderBar.cpp  HeaderBar.h  KeysPanel.cpp  KeysPanel.h  LogoBar.cpp  MasterMixerStrip.cpp  MasterMixerStrip.h  MidiLearnDialog.cpp  MidiLearnDialog.h  MixerMetering.h  MixerPanel.cpp  MixerPanel.h  MixerStrip.cpp  MixerStrip.h  OscilloscopeView.cpp  OscilloscopeView.h  PadGridView.cpp  PadGridView.h  PluginEditor.cpp  PluginEditorConstants.h  PluginProcessor.cpp  PluginProcessor.h  RenameOverlay.h  (+29 more)
themes/: cr8tive.dysektstyle  ghost.dysektstyle  lazy.dysektstyle  midnight.dysektstyle  shell.dysektstyle
ui/: DysektLookAndFeel.cpp  OscilloscopeView.cpp  PluginEditor.cpp  SliceControlBar.cpp  SliceLane.cpp  SliceLcdDisplay.cpp  SliceWaveformLcd.cpp
